Update with few css function

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body{
-  background-color: #E67255;
+  background-color: #5496C7;
 }
 h3 {
   font-style: italic;
@@ -10,14 +10,14 @@ p {
 }
 
 .back-color1 {
-  background: #D3CFCE;
+  background: #7D5AA8;
 }
 
 .back-color2 {
-  background: #AAA7A7  ;
+  background: #8955AC;
 }
 .back-color3 {
-  background: #9ABDCB ;
+  background: #A755AC;
 }
 .rounded {
   font-size: 20;
