Update the Background colors

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body{
-  background-color: #5496C7;
+  background-color:#F68C97;
 }
 h3 {
   font-style: italic;
@@ -10,14 +10,14 @@ p {
 }
 
 .back-color1 {
-  background: #7D5AA8;
+  background: #D5F68C;
 }
 
 .back-color2 {
-  background: #8955AC;
+  background: #ABCA30;
 }
 .back-color3 {
-  background: #A755AC;
+  background: #FCD946;
 }
 .rounded {
   font-size: 20;
